<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="45dip"
        android:background="@drawable/header" >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dip"
            android:background="@drawable/rounded_border"
            android:onClick="onClickBack"
            android:padding="8dip"
            android:text="@string/back"
            android:textColor="#ffffff" />

        <com.coffeeandpower.views.CustomFontView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/activity_join_join"
            android:textColor="#ffffff"
            android:textSize="25dip" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dip"
            android:background="@drawable/rounded_border"
            android:onClick="onClickJoin"
            android:padding="8dip"
            android:text="@string/activity_join_join"
            android:textColor="#ffffff" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/secret_society" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip"
                android:gravity="center_horizontal"
                android:text="@string/activity_join_co_working"
                android:textColor="#ffffff"
                android:textSize="16dip"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edittext_join_email"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dip"
                android:layout_marginRight="20dip"
                android:layout_marginTop="20dip"
                android:background="#000000"
                android:hint="@string/activity_join_email_address"
                android:inputType="textEmailAddress"
                android:padding="5dip"
                android:textColor="#ffffff" />

            <TextView
                android:id="@+id/textview_login_email"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:gravity="center_horizontal"
                android:text="@string/activity_join_did_not"
                android:textColor="#ffffff"
                android:textSize="16dip" />

            <EditText
                android:id="@+id/edittext_join_password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dip"
                android:layout_marginRight="20dip"
                android:layout_marginTop="10dip"
                android:background="#000000"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="5dip"
                android:singleLine="true"
                android:textColor="#ffffff" />

            <TextView
                android:id="@+id/textview_login_password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:gravity="center_horizontal"
                android:textColor="#ffffff"
                android:textSize="16dip" />

            <EditText
                android:id="@+id/edittext_join_re_type_password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dip"
                android:layout_marginRight="20dip"
                android:layout_marginTop="10dip"
                android:background="#000000"
                android:hint="@string/re_password"
                android:inputType="textPassword"
                android:padding="5dip"
                android:singleLine="true"
                android:textColor="#ffffff" />

            <EditText
                android:id="@+id/edittext_join_nickname"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dip"
                android:layout_marginRight="20dip"
                android:layout_marginTop="30dip"
                android:background="#000000"
                android:hint="@string/nickname"
                android:padding="5dip"
                android:singleLine="true"
                android:textColor="#ffffff" />

            <TextView
                android:id="@+id/textview_nick_name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:gravity="center_horizontal"
                android:text="@string/activity_join_nickname_must_be"
                android:textColor="#ffffff"
                android:textSize="16dip" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dip"
                android:orientation="horizontal" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/logo" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dip"
                    android:text="@string/coffeeandpower.com"
                    android:textColor="#ffffff" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>